# colorzero

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Makefile  README.rst  copyrights  copyrights.cfg  coverage.cfg  rtd_requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
colorzero/: __init__.py  attr.py  color.py  conversions.py  decorator.py  deltae.py  easings.py  names.py  style.py  tables.py  types.py
debian/: changelog  control  copyright  python-colorzero-doc.doc-base  rules
debian/source/: options
docs/: Makefile  api_color.rst  api_style.rst  changelog.rst  conf.py  development.rst  index.rst  install.rst  license.rst  quickstart.rst
lightwave/: __init__.py  attr.py  color.py  conversions.py  convert.py  decorator.py  names.py  types.py
scripts/: copyrights  previewer
tests/: compat.py  test_attr.py  test_color.py  test_conversions.py  test_deltae.py  test_easings.py  test_style.py  test_types.py
